// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderLine/>  image loaded FALSE 1`] = `
<styled.img
  isLoaded={false}
>
  <img
    className="sc-hKgILt cnWIUh"
  />
</styled.img>
`;

exports[`<HeaderLine/>  image loaded FALSE 2`] = `
<styled.div
  isLoaded={false}
>
  <div
    className="sc-dlfnbm iaWiXj"
  />
</styled.div>
`;

exports[`<HeaderLine/>  image loaded TRUE 1`] = `
<styled.img
  isLoaded={true}
>
  <img
    className="sc-hKgILt eMAJxy"
  />
</styled.img>
`;

exports[`<HeaderLine/>  image loaded TRUE 2`] = `
<styled.div
  isLoaded={true}
>
  <div
    className="sc-dlfnbm bRrQQw"
  />
</styled.div>
`;

exports[`<HeaderLine/>  renders correctly 1`] = `
<ImageContainer
  url="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
>
  <ErrorBoundary>
    <styled.img
      isLoaded={false}
      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
    >
      <img
        className="sc-hKgILt cnWIUh"
        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
      />
    </styled.img>
    <styled.div
      isLoaded={false}
    >
      <div
        className="sc-dlfnbm iaWiXj"
      />
    </styled.div>
  </ErrorBoundary>
</ImageContainer>
`;
